Missing late inline cleanup causes compiler/vectorapi/VectorLogicalOpIdentityTest.java IR failure

XMLWordPrintable

    • b16
    • x86_64

      The following test failed in the JDK21 CI:

      compiler/vectorapi/VectorLogicalOpIdentityTest.java

      Here's a snippet from the log file:

      ----------System.err:(46/4732)*----------
      WARNING: Using incubator modules: jdk.incubator.vector

      Command Line:
      c:\\ade\\mesos\\work_dir\\jib-master\\install\\jdk-21+10-752\\windows-x64-debug.jdk\\jdk-21\\fastdebug\\bin\\java.exe -DReproduce=true -cp C:\\sb\\prod\\1676361812\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_hotspot_not_fast_compiler\\classes\\3\\compiler\\vectorapi\\VectorLogicalOpIdentityTest.d;C:\\ade\\mesos\\work_dir\\jib-master\\install\\jdk-21+10-752\\src.full\\open\\test\\hotspot\\jtreg\\compiler\\vectorapi;C:\\sb\\prod\\1676361812\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_hotspot_not_fast_compiler\\classes\\3\\test\\lib;C:\\ade\\mesos\\work_dir\\jib-master\\install\\jdk-21+10-752\\src.full\\open\\test\\lib;C:\\sb\\prod\\1676361812\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_hotspot_not_fast_compiler\\classes\\3;C:\\ade\\mesos\\work_dir\\jib-master\\install\\jdk-21+10-752\\src.full\\open\\test\\hotspot\\jtreg;C:\\ade\\mesos\\work_dir\\jib-master\\install\\jtreg\\7.1.1\\1\\bundles\\jtreg-7.1.1+1.zip\\jtreg\\lib\\jtreg.jar -Djava.library.path=c:\\ade\\mesos\\work_dir\\jib-master\\install\\jdk-21+10-752\\windows-x64-debug.test\\hotspot\\jtreg\\native -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -XX:MaxRAMPercentage=4.16667 -Dtest.boot.jdk=c:\\ade\\mesos\\work_dir\\jib-master\\install\\jdk\\19\\36\\bundles\\windows-x64\\jdk-19_windows-x64_bin.zip\\jdk-19 -Djava.io.tmpdir=c:\\sb\\prod\\1676361812\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_hotspot_not_fast_compiler\\tmp -XX:+CreateCoredumpOnCrash -ea -esa -XX:+UnlockExperimentalVMOptions -server -XX:-TieredCompilation -Dir.framework.server.port=63665 --add-modules=jdk.incubator.vector -XX:+PrintCompilation -XX:+UnlockDiagnosticVMOptions -XX:+LogCompilation -XX:CompilerDirectivesFile=test-vm-compile-commands-pid-121248.log -XX:CompilerDirectivesLimit=391 -XX:-OmitStackTraceInFastThrow -DShouldDoIRVerification=true -XX:-BackgroundCompilation -XX:CompileCommand=quiet compiler.lib.ir_framework.test.TestVM compiler.vectorapi.VectorLogicalOpIdentityTest

      One or more @IR rules failed:

      Failed IR Rules (1) of Methods (1)
      ----------------------------------
      1) Method "public static void compiler.vectorapi.VectorLogicalOpIdentityTest.testAndMaskSameValue1()" - [Failed IR rules: 1]:
         * @IR rule 1: "@compiler.lib.ir_framework.IR(phase={DEFAULT}, applyIfCPUFeatureAnd={}, applyIfCPUFeatureOr={"sve1", "true", "avx512", "true"}, applyIf={}, applyIfCPUFeature={}, counts={"_#AND_V#_", "1"}, failOn={}, applyIfAnd={}, applyIfOr={}, applyIfNot={})"
           > Phase "PrintIdeal":
             - counts: Graph contains wrong number of nodes:
               * Constraint 1: "(\\d+(\\s){2}(AndV.*)+(\\s){2}===.*)"
                 - Failed comparison: [found] 0 = 1 [given]
                 - No nodes matched!

      >>> Check stdout for compilation output of the failed methods


        #############################################################
         - To only run the failed tests use -DTest, -DExclude,
           and/or -DScenarios.
         - To also get the standard output of the test VM run with
           -DReportStdout=true or for even more fine-grained logging
           use -DVerbose=true.
        #############################################################


      compiler.lib.ir_framework.driver.irmatching.IRViolationException: There were one or multiple IR rule failures. Please check stderr for more information.
      at compiler.lib.ir_framework.driver.irmatching.IRMatcher.reportFailures(IRMatcher.java:61)
      at compiler.lib.ir_framework.driver.irmatching.IRMatcher.match(IRMatcher.java:49)
      at compiler.lib.ir_framework.TestFramework.runTestVM(TestFramework.java:754)
      at compiler.lib.ir_framework.TestFramework.start(TestFramework.java:719)
      at compiler.lib.ir_framework.TestFramework.start(TestFramework.java:339)
      at compiler.lib.ir_framework.TestFramework.runWithFlags(TestFramework.java:245)
      at compiler.vectorapi.VectorLogicalOpIdentityTest.main(VectorLogicalOpIdentityTest.java:763)
      at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
      at java.base/java.lang.reflect.Method.invoke(Method.java:578)
      at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:125)
      at java.base/java.lang.Thread.run(Thread.java:1623)

      JavaTest Message: Test threw exception: compiler.lib.ir_framework.driver.irmatching.IRViolationException: There were one or multiple IR rule failures. Please check stderr for more information.
      JavaTest Message: shutting down test

      STATUS:Failed.`main' threw exception: compiler.lib.ir_framework.driver.irmatching.IRViolationException: There were one or multiple IR rule failures. Please check stderr for more information.
      ----------rerun:(46/7140)*----------

            Assignee:
            Damon Fenacci
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: