8302459: Missing late inline cleanup causes compiler/vectorapi/VectorLogicalOpIdentityTest.java IR failure

Co-authored-by: Vladimir Ivanov <vlivanov@openjdk.org>
Reviewed-by: thartmann, vlivanov